--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="">Download Excursion (Coming soon!)</a>
+        <p><a href="">Download Excursion (Coming soon!)</a></p>
     </header>
-    
+    <section>
+        <video width="404px" height="720px" autoplay muted loop>
+           <source src="resources/videos/excursion.mp4" type="video/mp4">
+            Your browser does not support the video.
+        </video>
+        <article>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of
+                interest around you.
+            </p>
+            <p>
+                <img src="./resources/images/camp.webp" alt="">
+            </p>
+            <p>
+                <img src="./resources/images/phone.webp" alt="">
+            </p>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a href="">Download Excursion (Coming soon!)</a></p>
+        </article>
+    </section>
+    <footer>
+        <p>Excursion</p>
+    </footer>
 </body>
 </html>
